# tensorflow-operators-cmake

./: .gitignore  .gitmodules  README.md
models/: .gitignore  decode_custom_options.py  tflite_to_json.sh
models/model_with_add/: notebook.py
models/model_with_add2/: notebook.py
models/model_with_argmax/: notebook.py
models/model_with_divide/: notebook.py
models/model_with_many_scratch_buffers/: notebook.py
models/model_with_maximum/: notebook.py
models/model_with_multiple_outputs/: notebook.py
models/model_with_multiple_scratch_buffers/: notebook.py
models/model_with_reduce_max/: notebook.py
models/model_with_reverse_sequence/: notebook.py
models/model_with_reverse_sequence2/: notebook.py
models/model_with_zero_out/: notebook.py
tflite/: README.md
tflite/add2/: CMakeLists.txt
tflite/add2/src/: custom_implementations.cpp
tflite/add_one/: CMakeLists.txt
tflite/add_one/src/: custom_implementations.cpp  registration.cpp
tflite/complex/: CMakeLists.txt
tflite/complex/lib/: libtflite_micro_custom.dylib
tflite/complex/src/: custom_implementations.cpp
tflite/reverse_sequence2/src/: custom_implementations.cpp
tflite/time_two/src/: custom_implementations.cpp
tflite/zero_out/src/: custom_implementations.cpp
